; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_s626.c_ResetCapFlags_A.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_s626.c_ResetCapFlags_A.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_device = type { i32 }
%struct.enc_private = type { i32 }

@CRBMSK_INTCTRL = common dso_local global i64 0, align 8
@CRBMSK_INTRESETCMD = common dso_local global i32 0, align 4
@CRBMSK_INTRESET_A = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.comedi_device*, %struct.enc_private*)* @ResetCapFlags_A to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ResetCapFlags_A(%struct.comedi_device* %0, %struct.enc_private* %1) #0 {
  %3 = alloca %struct.comedi_device*, align 8
  %4 = alloca %struct.enc_private*, align 8
  store %struct.comedi_device* %0, %struct.comedi_device** %3, align 8
  store %struct.enc_private* %1, %struct.enc_private** %4, align 8
  %5 = load %struct.comedi_device*, %struct.comedi_device** %3, align 8
  %6 = load %struct.enc_private*, %struct.enc_private** %4, align 8
  %7 = getelementptr inbounds %struct.enc_private, %struct.enc_private* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i64, i64* @CRBMSK_INTCTRL, align 8
  %10 = xor i64 %9, -1
  %11 = trunc i64 %10 to i32
  %12 = load i32, i32* @CRBMSK_INTRESETCMD, align 4
  %13 = load i32, i32* @CRBMSK_INTRESET_A, align 4
  %14 = or i32 %12, %13
  %15 = call i32 @DEBIreplace(%struct.comedi_device* %5, i32 %8, i32 %11, i32 %14)
  ret void
}

declare dso_local i32 @DEBIreplace(%struct.comedi_device*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
